all: Prepare for tests against JDK 21
JDK 21 requires an explicit flag to hide a warning when an agent is
attached dynamically, as well as an up-to-date Mockito since the old
one had a ByteBuddy dependency that didn't support JDK 21 without
special flags.